k8s/overlays/prod/replica-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-website
spec:
  replicas: 3
